--- a/SyncTank.ui
+++ b/SyncTank.ui
@@ -14,13 +14,13 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="btn_load">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>20</y>
+      <x>20</x>
+      <y>10</y>
       <width>75</width>
-      <height>23</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -30,20 +30,33 @@
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>500</y>
+      <x>100</x>
+      <y>10</y>
       <width>441</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
     </property>
    </widget>
-   <widget class="QListWidget" name="listWidget">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>80</y>
-      <width>451</width>
-      <height>411</height>
+      <y>90</y>
+      <width>56</width>
+      <height>12</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QListView" name="listView">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>120</y>
+      <width>256</width>
+      <height>192</height>
      </rect>
     </property>
    </widget>
