--- a/SyncTank.ui
+++ b/SyncTank.ui
@@ -280,6 +280,19 @@
      <string/>
     </property>
    </widget>
+   <widget class="QPushButton" name="btn_open_skin">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>400</y>
+      <width>61</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Open</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
