--- a/SyncTank.ui
+++ b/SyncTank.ui
@@ -40,16 +40,16 @@
    <widget class="QLabel" name="name">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>120</y>
-      <width>361</width>
-      <height>50</height>
+      <x>280</x>
+      <y>129</y>
+      <width>511</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>MS Sans Serif</family>
-      <pointsize>38</pointsize>
+      <pointsize>32</pointsize>
      </font>
     </property>
     <property name="text">
@@ -59,16 +59,16 @@
    <widget class="QLabel" name="number">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>100</y>
+      <x>280</x>
+      <y>110</y>
       <width>361</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>MS Sans Serif</family>
-      <pointsize>12</pointsize>
+      <pointsize>10</pointsize>
      </font>
     </property>
     <property name="text">
@@ -222,9 +222,9 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>110</y>
-      <width>100</width>
-      <height>50</height>
+      <y>170</y>
+      <width>120</width>
+      <height>60</height>
      </rect>
     </property>
     <property name="text">
@@ -247,8 +247,8 @@
    <widget class="QLabel" name="lbl_error">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>40</y>
+      <x>540</x>
+      <y>-10</y>
       <width>331</width>
       <height>171</height>
      </rect>
@@ -291,6 +291,19 @@
     </property>
     <property name="text">
      <string>Open</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_opentemp">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>530</y>
+      <width>81</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Open Temp</string>
     </property>
    </widget>
   </widget>
