--- a/SyncTank.ui
+++ b/SyncTank.ui
@@ -43,7 +43,7 @@
       <x>280</x>
       <y>129</y>
       <width>511</width>
-      <height>41</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -209,13 +209,16 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>160</y>
-      <width>360</width>
-      <height>240</height>
+      <y>200</y>
+      <width>300</width>
+      <height>200</height>
      </rect>
     </property>
     <property name="frameShape">
-     <enum>QFrame::Box</enum>
+     <enum>QFrame::NoFrame</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Sunken</enum>
     </property>
     <property name="text">
      <string/>
