--- a/SyncTank.ui
+++ b/SyncTank.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>560</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>60</y>
+      <y>20</y>
       <width>291</width>
       <height>20</height>
      </rect>
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>110</y>
+      <y>100</y>
       <width>256</width>
       <height>331</height>
      </rect>
@@ -41,8 +41,8 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>129</y>
-      <width>511</width>
+      <y>139</y>
+      <width>711</width>
       <height>51</height>
      </rect>
     </property>
@@ -60,7 +60,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>110</y>
+      <y>120</y>
       <width>361</width>
       <height>31</height>
      </rect>
@@ -79,7 +79,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>400</y>
+      <y>380</y>
       <width>211</width>
       <height>41</height>
      </rect>
@@ -91,8 +91,8 @@
    <widget class="QLabel" name="lbl_Version">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>440</y>
+      <x>280</x>
+      <y>420</y>
       <width>341</width>
       <height>16</height>
      </rect>
@@ -105,7 +105,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>40</y>
+      <y>0</y>
       <width>331</width>
       <height>21</height>
      </rect>
@@ -118,7 +118,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>40</y>
+      <y>0</y>
       <width>41</width>
       <height>23</height>
      </rect>
@@ -131,7 +131,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>510</y>
+      <y>470</y>
       <width>331</width>
       <height>21</height>
      </rect>
@@ -144,7 +144,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>80</y>
+      <y>40</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -157,7 +157,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>530</y>
+      <y>490</y>
       <width>41</width>
       <height>23</height>
      </rect>
@@ -170,7 +170,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>530</y>
+      <y>490</y>
       <width>91</width>
       <height>23</height>
      </rect>
@@ -183,7 +183,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>60</y>
+      <y>20</y>
       <width>41</width>
       <height>23</height>
      </rect>
@@ -196,7 +196,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>490</y>
+      <y>450</y>
       <width>81</width>
       <height>23</height>
      </rect>
@@ -209,8 +209,8 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>200</y>
-      <width>300</width>
+      <y>180</y>
+      <width>320</width>
       <height>200</height>
      </rect>
     </property>
@@ -228,7 +228,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>80</y>
+      <y>100</y>
       <width>60</width>
       <height>30</height>
      </rect>
@@ -241,7 +241,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>470</y>
+      <y>430</y>
       <width>331</width>
       <height>21</height>
      </rect>
@@ -253,8 +253,8 @@
    <widget class="QLabel" name="lbl_error">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>-10</y>
+      <x>340</x>
+      <y>10</y>
       <width>331</width>
       <height>171</height>
      </rect>
@@ -271,9 +271,9 @@
    <widget class="QLabel" name="lbl_error_2">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>440</y>
-      <width>391</width>
+      <x>240</x>
+      <y>400</y>
+      <width>351</width>
       <height>111</height>
      </rect>
     </property>
@@ -290,7 +290,7 @@
     <property name="geometry">
      <rect>
       <x>490</x>
-      <y>400</y>
+      <y>380</y>
       <width>61</width>
       <height>41</height>
      </rect>
@@ -303,7 +303,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>490</y>
+      <y>450</y>
       <width>81</width>
       <height>23</height>
      </rect>
@@ -315,8 +315,8 @@
    <widget class="QComboBox" name="cb_country">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>80</y>
+      <x>20</x>
+      <y>70</y>
       <width>76</width>
       <height>22</height>
      </rect>
@@ -386,13 +386,36 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>490</y>
+      <y>450</y>
       <width>51</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>change</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="search">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>71</y>
+      <width>141</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_go">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>70</y>
+      <width>31</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GO</string>
     </property>
    </widget>
   </widget>
