--- a/SyncTank.ui
+++ b/SyncTank.ui
@@ -208,10 +208,10 @@
    <widget class="QLabel" name="lbl_img">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>180</y>
-      <width>320</width>
-      <height>200</height>
+      <x>150</x>
+      <y>100</y>
+      <width>481</width>
+      <height>321</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -222,6 +222,9 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="textInteractionFlags">
+     <set>Qt::NoTextInteraction</set>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_img_2">
@@ -291,7 +294,7 @@
      <rect>
       <x>490</x>
       <y>380</y>
-      <width>61</width>
+      <width>41</width>
       <height>41</height>
      </rect>
     </property>
@@ -416,6 +419,19 @@
     </property>
     <property name="text">
      <string>GO</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_open_tanksgg">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>380</y>
+      <width>61</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Tanks.gg</string>
     </property>
    </widget>
   </widget>
